# cg

./: .gitmodules  CMakeLists.txt  Camera.cpp  Camera.hpp  Light.cpp  Light.hpp  Material.cpp  Material.hpp  Mesh.cpp  Mesh.hpp  Shader.cpp  Shader.hpp  Texture.cpp  Texture.hpp  Window.cpp  Window.hpp  main.cpp  readme.md  workspace.code-workspace
cmake/: 3rdParty.cmake  cmake.cmake  opengl.cmake
shaders/: shader.frag  shader.vert
